Fix CSS selector for message alignment

--- a/portfolio/styles/style.css
+++ b/portfolio/styles/style.css
@@ -680,7 +680,7 @@ input {
     width: 50%;
 }
 
-#msg:not(> *) {
+#msg:not(>) {
     margin-bottom: 15px;
     text-align: center;
     align-items: center;
